--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,11 @@ a {
 }
 
 body {
-    text-align: center;
+    background-image: url(./img/dictionary-background.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: top center;
+    background-size: cover;
 }
 
 h1 {
