--- a/src/css/Dictionary.css
+++ b/src/css/Dictionary.css
@@ -1,4 +1,90 @@
 .hint {
     padding-bottom: 1%;
     font-size: 1.2em;
+    color: #fff;
+}
+
+.papers,
+.papers:before,
+.papers:after {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.1), 1px 1px 3px rgba(0, 0, 0, 0.2);
+}
+
+.papers {
+    position: relative;
+    width: 100%;
+    padding: 2em;
+    margin: 50px auto;
+}
+
+.papers:before,
+.papers:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    -webkit-transform: rotateZ(2.5deg);
+    -o-transform: rotate(2.5deg);
+    transform: rotateZ(2.5deg);
+    z-index: -1;
+}
+
+.papers:after {
+    -webkit-transform: rotateZ(-2.5deg);
+    -o-transform: rotate(-2.5deg);
+    transform: rotateZ(-2.5deg);
+}
+
+.papers h4 {
+    font-size: 1.8em;
+    font-weight: normal;
+    text-align: center;
+    padding: 0.2em 0;
+    margin: 0;
+    border-top: 1px solid #ddd;
+    border-bottom: 2px solid #ddd;
+}
+
+.papers p {
+    text-align: left;
+    margin: 1, 5em 0;
+}
+
+.input-box {
+    position: relative;
+    font-size: 1.5em;
+    background: rgba(41, 26, 9, 0.8);
+    padding: 10px 15px;
+    border-radius: 16px;
+    box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.3);
+    margin: 20px auto;
+    text-align: center;
+}
+
+.icon {
+    position: absolute;
+    right: 50px;
+    top: 18px;
+    color: #ced4da;
+
+}
+
+.form-control {
+    height: 40px;
+    background-color: #2c272769;
+}
+
+.form-control:focus {
+    background-color: #fefefe80;
+    box-shadow: none;
+    border-color: #eee;
+}
+
+::placeholder {
+    font-size: 120%;
+    color: #ced4da;
 }
