--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -9,7 +11,7 @@ li {
 }
 
 a {
-    text-decoration: none;
+    color: #fff;
 }
 
 body {
@@ -20,6 +22,31 @@ body {
     background-size: cover;
 }
 
+header {
+    margin: 20px;
+    text-align: center;
+    text-shadow: 2px 2px 5px rgb(132, 129, 129);
+    font-family: 'Berkshire Swash', cursive;
+}
+
 h1 {
-    padding: 2%;
+    padding-top: 2%;
+    font-size: 64px;
+    background-image: linear-gradient(to right,
+            #462523 0,
+            #cb9b51 22%,
+            #f6e27a 45%,
+            #f6f2c0 50%,
+            #f6e27a 55%,
+            #cb9b51 78%,
+            #462523 100%);
+    color: transparent;
+    background-clip: text;
+    letter-spacing: 5px;
+    text-shadow: 2px 2px 5px rgb(34, 31, 31);
+}
+
+footer {
+    color: #ced4da;
+    padding-bottom: 3%;
 }
