--- a/src/css/Dictionary.css
+++ b/src/css/Dictionary.css
@@ -1,7 +1,14 @@
+h2 {
+    color: #ced4da;
+    text-align: center;
+    font-family: 'Sriracha', cursive;
+}
+
 .hint {
     padding-bottom: 1%;
-    font-size: 1.2em;
-    color: #fff;
+    font-size: 0.5em;
+    color: #ced4da;
+    text-align: left;
 }
 
 .papers,
@@ -58,8 +65,8 @@
     position: relative;
     font-size: 1.5em;
     background: rgba(41, 26, 9, 0.8);
-    padding: 10px 15px;
-    border-radius: 16px;
+    padding: 15px 20px;
+    border-radius: 9px;
     box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.3);
     margin: 20px auto;
     text-align: center;
@@ -67,8 +74,8 @@
 
 .icon {
     position: absolute;
-    right: 50px;
-    top: 18px;
+    right: 55px;
+    top: 48px;
     color: #ced4da;
 
 }
@@ -82,9 +89,10 @@
     background-color: #fefefe80;
     box-shadow: none;
     border-color: #eee;
+    font-size: 1em;
 }
 
 ::placeholder {
-    font-size: 120%;
     color: #ced4da;
+    padding: 10px;
 }
